--- a/containers/web/web-5.5/Dockerfile
+++ b/containers/web/web-5.5/Dockerfile
@@ -8,7 +8,7 @@ RUN gpg --keyserver keys.gnupg.net --recv-key 89DF5277
 RUN gpg -a --export 89DF5277 | apt-key add -
 
 RUN apt-get update
-RUN apt-get -y install libapache2-mod-php5 php5-curl php5-gd php5-mysql php5-sqlite php5-pgsql php-pear php-codesniffer php5
+RUN apt-get -y install libapache2-mod-php5 php5-curl php5-gd php5-mysql php5-sqlite php5-pgsql php-pear php-codesniffer php5 php5-mongo
 
 RUN apt-get clean
 RUN apt-get -y autoremove
